--- a/src/3rdparty/CMakeLists.txt
+++ b/src/3rdparty/CMakeLists.txt
@@ -1,3 +1,6 @@
+# Disable clang-tidy checks
+set(CMAKE_CXX_CLANG_TIDY "")
+
 add_subdirectory(CLI11)
 add_subdirectory(Catch2)
 add_subdirectory(fmt)
